--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
@@ -526,6 +526,21 @@
         "persistent": "zh: persistent"
       }
     },
+    "DataRequest": {
+      "DataRequest": "zh: Data Request",
+      "SubmitRequest": "zh: Submit Request",
+      "Title": "zh: Data Request Access",
+      "SubTitle": "zh: What would you like to request?",
+      "Copy": "zh: Receive a copy of my data",
+      "Update": "zh: Update/change my data",
+      "Delete": "zh: Delete my data entirely",
+      "Other": "zh: Other",
+      "DescribeRequest": "zh: Please describe your request",
+      "RequestHasBeenSubmitted": "zh: Your request has been submitted. We will respond to your request soon as possible.",
+      "Okay": "zh: Okay",
+      "SignInTooltip": "zh: Please sign in to start a data access request",
+      "Error": "zh: Please enter your request."
+    },
     "PrivacyPolicy": {
       "Title": "zh: Prion Registry Privacy Statement",
       "Intro": {
