--- a/ddp-workspace/projects/ddp-brain-v2/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain-v2/src/assets/i18n/en.json
@@ -327,18 +327,22 @@
         "Text": "In the meantime, our team will share data snapshots to provide the community with initial views of the collective dataset.",
         "Snapshots": {
             "Title": "Snapshots",
-            "Type": {
-                "Link": "Brain Tumor Diagnosis Type",
-                "Date": "[Date Published]",
-                "Text": "Patient-reported responses to the question: “When you were first diagnosed with brain cancer, what type was it?”",
-                "Alt": "Brain tumor diagnosis type diagram"
-            },
-            "Diagnosis": {
-                "Link": "Age at Initial Brain Cancer Diagnosis",
-                "Date": "[Date Published]",
-                "Text": "Calculated from response to the question: “When were you first diagnosed with brain cancer?” & patient-reported date of birth.",
-                "Alt": "Age at initial brain cancer diagnosis diagram"
-            }
+            "Diagrams": [
+                {
+                    "Link": "Brain Tumor Diagnosis Type",
+                    "Date": "[Date Published]",
+                    "Text": "Patient-reported responses to the question: “When you were first diagnosed with brain cancer, what type was it?”",
+                    "Image": "assets/images/diagnosis.png",
+                    "Alt": "Brain tumor diagnosis type diagram"
+                },
+                {
+                    "Link": "Age at Initial Brain Cancer Diagnosis",
+                    "Date": "[Date Published]",
+                    "Text": "Calculated from response to the question: “When were you first diagnosed with brain cancer?” & patient-reported date of birth.",
+                    "Image": "assets/images/initial.png",
+                    "Alt": "Age at initial brain cancer diagnosis diagram"
+                }
+            ]
         },
         "MailingList": {
             "Text": "To receive data snapshots and updates on the data release"
@@ -346,18 +350,23 @@
         "DataRelease": {
             "Title": "What does a data release look like?",
             "Text": "Below are links out to datasets from other Count Me In projects. This is what we’re working towards for the Brain Cancer Project. If you have questions about our data release process, please email us at",
-            "MBC": {
-                "Alt": "The Metastatic Breast Cancer Project data release diagram",
-                "Link": "The Metastatic Breast Cancer Project"
-            },
-            "MPC": {
-                "Alt": "The Metastatic Prostate Cancer Project data release diagram",
-                "Link": "The Metastatic Prostate Cancer Project"
-            },
-            "Angio": {
-                "Alt": "The Angiosarcoma Project data release diagram",
-                "Link": "The Angiosarcoma Project"
-            }
+            "Diagrams": [
+                {
+                    "Alt": "The Metastatic Breast Cancer Project data release diagram",
+                    "Link": "The Metastatic Breast Cancer Project",
+                    "Image": "assets/images/mbc-data.png"
+                },
+                {
+                    "Alt": "The Metastatic Prostate Cancer Project data release diagram",
+                    "Link": "The Metastatic Prostate Cancer Project",
+                    "Image": "assets/images/mpc-data.png"
+                },
+                {
+                    "Alt": "The Angiosarcoma Project data release diagram",
+                    "Link": "The Angiosarcoma Project",
+                    "Image": "assets/images/angio-data.png"
+                }
+            ]
         }
     },
     "Toolkit": {
