--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -339,6 +339,7 @@
     "CompleteButton": "Edit",
     "ReviewButton": "View",
     "AgreeButton": "I agree",
+    "ReportButton": "Report",
     "NotAgreeButton": "I'm not ready to agree",
     "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
     "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
