4796 | data request activity in modal

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
@@ -541,6 +541,12 @@
         "persistent": "persistent"
       }
     },
+    "DataRequest": {
+      "DataRequest": "Data Request",
+      "SubmitRequest": "Submit Request",
+      "Okay": "Okay",
+      "SignInTooltip": "Please sign in to start a data access request"
+    },
     "PrivacyPolicy": {
       "Title": "Prion Registry Privacy Statement",
       "Intro": {
