--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/es.json
@@ -541,6 +541,12 @@
         "persistent": "es: persistent"
       }
     },
+    "DataRequest": {
+      "DataRequest": "es: Data Request",
+      "SubmitRequest": "es: Submit Request",
+      "Okay": "es: Okay",
+      "SignInTooltip": "es: Please sign in to start a data access request"
+    },
     "PrivacyPolicy": {
       "Title": "es: Prion Registry Privacy Statement",
       "Intro": {
