--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/zh.json
@@ -541,6 +541,12 @@
         "persistent": "zh: persistent"
       }
     },
+    "DataRequest": {
+      "DataRequest": "zh: Data Request",
+      "SubmitRequest": "zh: Submit Request",
+      "Okay": "zh: Okay",
+      "SignInTooltip": "zh: Please sign in to start a data access request"
+    },
     "PrivacyPolicy": {
       "Title": "zh: Prion Registry Privacy Statement",
       "Intro": {
