--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -19,7 +19,7 @@
     "Q&A": "Preguntas y respuestas",
     "WhoWeAre": "Quiénes somos",
     "StayInformed": "Noticias y novedades",
-    "KitInstructions": "Instrucciones para el kit",
+    "Help": "Help",
     "Dashboard": "Mi panel",
     "Menu": "Menú",
     "Invitation": "Código de invitación",
@@ -289,6 +289,22 @@
       "Error": "Ingrese una dirección de correo electrónico válida."
     },
     "Button": "Siguiente"
+  },
+  "Help": {
+    "Title": "Help Center",
+    "Text": {
+      "Part1": "If you have further questions, please reach out to study staff by emailing",
+      "Part2": "or"
+    },
+    "Collect": {
+      "Title": "How to collect your samples",
+      "Link": "Sample Collection Instructions",
+      "Alt": "PDF file icon"
+    },
+    "UPS": {
+      "Title": "UPS locations and Hours of Operation",
+      "Text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nisi sapien, fringilla non lacus id."
+    }
   },
   "Toolkit": {
     "Dashboard": {
