--- a/ddp-workspace/projects/ddp-brain-v2/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain-v2/src/assets/i18n/en.json
@@ -365,6 +365,14 @@
             "InputPlaceholder": "Password",
             "PasswordWrongError": "Incorrect password. Please try again.",
             "PasswordRequiredError": "Password is required"
+        },
+        "ErrorPage": {
+            "Title": "We've encountered an error",
+            "Text": "We're sorry, but an error has occurred.",
+            "DefaultText": {
+                "TextPt1": "Please wait a moment and retry. If the trouble persists, please email us at",
+                "TextPt2": "or call us at"
+            }
         }
     },
     "SDK": {
