--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -304,7 +304,8 @@
     "UPS": {
       "Title": "UPS locations and Hours of Operation",
       "Text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nisi sapien, fringilla non lacus id."
-    }
+    },
+    "Placeholder": "Placeholder"
   },
   "Toolkit": {
     "Dashboard": {
