--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -339,7 +339,7 @@
     "CompleteButton": "Modifye",
     "ReviewButton": "Gade",
     "AgreeButton": "Mwen aksepte",
-    "ReportButton": "Report",
+    "ReportButton": "[HT] Report",
     "NotAgreeButton": "Mwen pa pare pou aksepte",
     "ValidateError": "Soumisyon an pa kapab kontinye. Tanpri, egzamine mesaj yo ki nan fòmilè a pou w jwenn plis detay.",
     "CommunicationError": "Te gen yon pwoblèm pou anrejistre done ou yo. Tanpri, tcheke fòmilè an ak repons ou yo anvan w soumèt yo",
