--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -19,7 +19,7 @@
     "Q&A": "Preguntas y respuestas",
     "WhoWeAre": "Quiénes somos",
     "StayInformed": "Noticias y novedades",
-    "Help": "Help",
+    "Help": "[ES] Help",
     "Dashboard": "Mi panel",
     "Menu": "Menú",
     "Invitation": "Código de invitación",
@@ -356,7 +356,7 @@
     "CompleteButton": "Editar",
     "ReviewButton": "Ver",
     "AgreeButton": "Acepto",
-    "ReportButton": "[ES] Report",
+    "ReportButton": "Report",
     "NotAgreeButton": "Todavía no quiero aceptar",
     "ValidateError": "No se puede continuar con el proceso. Revise los mensajes del formulario para obtener más información.",
     "CommunicationError": "Hubo un problema al guardar sus datos. Revise el formulario y sus respuestas antes de enviar todo.",
