--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -341,7 +341,7 @@
     "AgreeButton": "Acepto",
     "ReportButton": "[ES] Report",
     "NotAgreeButton": "Todavía no quiero aceptar",
-    "ValidateError": "No se puede continuar con el proceso. Revise los mensajes del formulario para obtener más información.",
+    "ValidateError": "[ES] Please complete all required fields.",
     "CommunicationError": "Hubo un problema al guardar sus datos. Revise el formulario y sus respuestas antes de enviar todo.",
     "SaveError": "Lamentablemente, se produjo un error.",
     "ExportStudy": {
