--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -313,7 +313,7 @@
       },
       "Step2": {
         "Title": "[ES] Step 2:",
-        "Text": "[ES] Under location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
+        "Text": "[ES] Under Location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
         "ImageAlt": "[ES] UPS locations instruction, UPS boxes"
       }
     },
