--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -313,7 +313,7 @@
       },
       "Step2": {
         "Title": "[HT] Step 2:",
-        "Text": "[HT] Under location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
+        "Text": "[HT] Under Location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
         "ImageAlt": "[HT] UPS locations instruction, UPS boxes"
       }
     },
