--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -313,7 +313,7 @@
       },
       "Step2": {
         "Title": "Step 2:",
-        "Text": "Under location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
+        "Text": "Under Location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
         "ImageAlt": "UPS locations instruction, UPS boxes"
       }
     },
