--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -307,13 +307,13 @@
         "Title": "[ES] Step 1:",
         "Text": {
           "Part1": "[ES] Click",
-          "Part2": "Type your zip code and click on “See All Options”."
+          "Part2": "Type your zip code and click on “<span class=\"bold\">See All Options</span>”."
         },
         "ImageAlt": "[ES] UPS locations instruction, your location"
       },
       "Step2": {
         "Title": "[ES] Step 2:",
-        "Text": "[ES] Under Location Type, check the boxes for \"The UPS Store®\" and \"UPS Drop Box\". Then click the search icon.",
+        "Text": "[ES] Under “<span class=\"bold\">Location Type</span>”, check the boxes for “<span class=\"bold\">The UPS Store®</span>” and “<span class=\"bold\">UPS Drop Box</span>”. Then click the search icon",
         "ImageAlt": "[ES] UPS locations instruction, UPS boxes"
       }
     },
@@ -331,7 +331,8 @@
         "Part2": "or"
       }
     },
-    "ArrowAlt": "[ES] Arrow"
+    "ArrowAlt": "[ES] Arrow",
+    "SearchAlt": "[ES] Search icon"
   },
   "Toolkit": {
     "Dashboard": {
