--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -210,7 +210,9 @@
       "Next": "Siguiente",
       "Previous": "Ant",
       "SignIn": "Iniciar sesión",
-      "YourParticipants": "Sus participantes"
+      "YourParticipants": "Sus participantes",
+      "ForResearchers": "Para Investigadores",
+      "DataAccessRequest": "Solicitud de acceso a datos"
     }
   },
   "DataAccess": {
