--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -210,7 +210,9 @@
       "Next": "Suivant",
       "Previous": "Précédent",
       "SignIn": "Connexion",
-      "YourParticipants": "Vos participants"
+      "YourParticipants": "Vos participants",
+      "ForResearchers": "Pour les Chercheurs",
+      "DataAccessRequest": "Demande d'accès aux données"
     }
   },
   "DataAccess": {
