--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -210,7 +210,9 @@
       "Next": "Avanti",
       "Previous": "Indietro",
       "SignIn": "Accedi",
-      "YourParticipants": "I tuoi partecipanti"
+      "YourParticipants": "I tuoi partecipanti",
+      "ForResearchers": "Per i Ricercatori",
+      "DataAccessRequest": "Richiesta di accesso ai dati"
     }
   },
   "DataAccess": {
