--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -210,7 +210,9 @@
       "Next": "Dalej",
       "Previous": "Wstecz",
       "SignIn": "Zaloguj się",
-      "YourParticipants": "Twoi uczestnicy"
+      "YourParticipants": "Twoi uczestnicy",
+      "ForResearchers": "Dla Naukowców",
+      "DataAccessRequest": "Żądanie dostępu do danych"
     }
   },
   "DataAccess": {
