--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -210,7 +210,9 @@
       "Next": "Avançar",
       "Previous": "Anterior",
       "SignIn": "Registre-se",
-      "YourParticipants": "Seus participantes"
+      "YourParticipants": "Seus participantes",
+      "ForResearchers": "Para Pesquisadores",
+      "DataAccessRequest": "Solicitação de acesso a dados"
     }
   },
   "DataAccess": {
