--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -210,7 +210,9 @@
       "Next": "Следующий",
       "Previous": "Предыдущий",
       "SignIn": "Войти",
-      "YourParticipants": "Ваши участники"
+      "YourParticipants": "Ваши участники",
+      "ForResearchers": "Исследователям",
+      "DataAccessRequest": "Запрос на доступ к данным"
     }
   },
   "DataAccess": {
