--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -210,7 +210,9 @@
       "Next": "Sonraki",
       "Previous": "Önceki",
       "SignIn": "Oturum Aç",
-      "YourParticipants": "Katılımcılarınız"
+      "YourParticipants": "Katılımcılarınız",
+      "ForResearchers": "Araştırmacı",
+      "DataAccessRequest": "Veri Erişim İsteği"
     }
   },
   "DataAccess": {
