--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -382,6 +382,8 @@
     "EditButton": "Continue",
     "CompleteButton": "Edit",
     "ReviewButton": "View",
+    "OpenButton": "Open",
+    "StartButton": "Start",
     "AgreeButton": "I agree",
     "ReportButton": "Report",
     "NotAgreeButton": "I'm not ready to agree",
