--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -382,6 +382,8 @@
     "EditButton": "Kontinye",
     "CompleteButton": "Modifye",
     "ReviewButton": "Gade",
+    "OpenButton": "[HT] Open",
+    "StartButton": "[HT] Start",
     "AgreeButton": "Mwen aksepte",
     "ReportButton": "[HT] Report",
     "NotAgreeButton": "Mwen pa pare pou aksepte",
