--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -64,7 +64,7 @@
     },
     "Doctors": [
       {
-        "Hospital": "profesor emerytowany genetyki medycznej –“ Uniwersytet Cambridge, Cambridge, Wielka Brytania oraz honorowy członek wydziału, Instytut Wellcome Trust Sanger, Hinxton, Wielka Brytania",
+        "Hospital": "profesor emerytowany genetyki medycznej – Uniwersytet Cambridge, Cambridge, Wielka Brytania oraz honorowy członek wydziału, Instytut Wellcome Trust Sanger, Hinxton, Wielka Brytania",
         "Name": "Martin Bobrow",
         "Rank": "lek."
       },
