--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -14,7 +14,7 @@
       "Steps": [
         {
           "Name": "注册数据平台",
-          "Text": "点击 \\\"Join Us\\\" 并用您的姓名和电子邮箱地址创建一个帐户。 创建帐户后，您可以填写一份简短的表格，在自己的数据平台上注册自己（如果您有A-T）或您的孩子（A）作为参与者登录我们的数据平台。"
+          "Text": "点击 \\\"加入我们\\\" 并用您的姓名和电子邮箱地址创建一个帐户。 创建帐户后，您可以填写一份简短的表格，在自己的数据平台上注册自己（如果您有A-T）或您的孩子（A）作为参与者登录我们的数据平台。"
         },
         {
           "Name": "给我们许可",
@@ -79,7 +79,7 @@
         "Hospital": "美国马里兰州巴尔的摩约翰霍普金斯儿童中心儿科与神经病学副教授"
       },
       {
-        "Hospital": "美国加州Mountain View Google Genomics 负责人"
+        "Hospital": "美国加州 山景城Google基因组学 负责人"
       },
       {
         "Hospital": "日本东京医科大学儿科与发育生物学系"
