--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -258,7 +258,7 @@
         },
         "Third": {
           "H3": "3. Condividi la tua esperienza e un campione di saliva",
-          "Text": "Compila un questionario online sul modo in cui l'A-T influisce sulla tua vita o su quella di tuo figlio o figlia. Ti invieremo anche un kit per la raccolta di un campione di saliva per il sequenziamento del genoma. Inoltre, potrai aggiornare periodicamente la documentazione relativa alla tua storia clinica e le esperienze che hai condiviso con la piattaforma."
+          "Text": "Compila un questionario online sul modo in cui l'A-T influisce sulla tua vita o su quella di tuo figlio o tua figlia. Ti invieremo anche un kit per la raccolta di un campione di saliva per il sequenziamento del genoma. Inoltre, potrai aggiornare periodicamente la documentazione relativa alla tua storia clinica e le esperienze che hai condiviso con la piattaforma."
         }
       },
       "Together": {
